Segunda version, modificada

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 		<img id="imagenCv" src="Imagenes\FotoPerfilCV.jpeg" alt="No se pudo cargar la imagen :/">
 		<div class="seccionesLateral">
 			<h3>CONTACTO</h3>
-			<img id="iconUbicacion" class="iconosCv" src= "Imagenes\IconoUbicacionCV-Oscuro.png" alt="No se pudo cargar la imagen :/">
+			<img id="iconUbicacion" class="iconosCv" src= "Imagenes\IconoUbicacionCV-Negro.png" alt="No se pudo cargar la imagen :/">
 			<p>1876 College St</p>
-			<img id="iconMail" class="iconosCv" src="Imagenes\IconoMailCV-Oscuro.png" alt="No se pudo cargar la imagen :/">
+			<img id="iconMail" class="iconosCv" src="Imagenes\IconoMailCV-Negro.png" alt="No se pudo cargar la imagen :/">
 			<p>ken.bennett@example.com</p>
-			<img id="iconTelefono" class="iconosCv" src="Imagenes\IconoTelefonoCV-Oscuro.png" alt="No se pudo cargar la imagen :/">
+			<img id="iconTelefono" class="iconosCv" src="Imagenes\IconoTelefonoCV-Negro.png" alt="No se pudo cargar la imagen :/">
 			<p>(608) 965-4770</p>
-			<img id="iconCumpleaños" class="iconosCv" src="Imagenes\IconoFechaCV-Oscuro.png" alt="No se pudo cargar la imagen :/">
+			<img id="iconCumpleaños" class="iconosCv" src="Imagenes\IconoFechaCV-Negro.png" alt="No se pudo cargar la imagen :/">
 			<p>10/2/1990</p>
 		</div>
 		<div class="seccionesLateral">
